@@ -42,6 +42,11 @@ Version 2.1-19 (opened August 20, 2012)
 	oecosimu-compliant earlier and simultaneously they also gained the
 	density and densityplot methods.
 
+	* mantel, mantel.partial: mixed cor.test() and cor(), but now only
+	use cor(). The use of cor.test() was only used to get the textual
+	presentation of the correlation 'method'. Internal changes that
+	should have no effect in results, but consistency is a good thing.
+
 	* protest: do not return the observed statistic as one of the
 	permuted values but separately.
 	
